--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <tr><th>Cena</th><td>1234</td><td>1234</td></tr>
      <tr><td>1</td><td>1</td><td>2</td></tr>
      <tr><td rowspan="2">k</td><td>1</td><td>2</td></tr>
-     <tr><td></td><td colspan="3"></td></tr> 
+     <tr><td colspan="2"></td></tr> 
      <tr><td>1</td><td>1</td><td>2</td></tr>
     </table>
     <table>
@@ -49,3 +49,4 @@
     </table>
      </body>
 </html>
+
