--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
         </style>
     </head>
      <body>
-    <table>
+        <table align="center">
         <tr><th rowspan="2"></th><th>2</th><th>3</th></tr>   
         <tr><td>1</td><td>2</td></tr>
         <tr><td>1</td><td>2</td><td>3</td></tr>
     </table>
-    <table>
+    <table align="center">
      <tr><th>1</th><th>2</th><th>3</th><th>4</th></tr>   
      <tr><th>1</th><th colspan="2"></th><th>4</th></tr>  
      <tr><th>1</th><th>2</th><th>3</th><th>4</th></tr>  
     </table>
-    <table>
+    <table align="center">
      <tr><th colspan="2"><th>2</th><th>3</th></tr> 
      <tr><th rowspan="2"><th>2</th><th>3</th><th>4</th></tr> 
      <tr><th><th>2</th><th>3</th></tr> 
      <tr><th><th>2</th><th>3</th><th>4</th></tr> 
     </table>
-    <table>
+    <table align="center">
      <tr><th>Cena</th><td>1234</td><td>1234</td></tr>
      <tr><td>1</td><td>1</td><td>2</td></tr>
      <tr><td rowspan="2">k</td><td>1</td><td>2</td></tr>
      <tr><td colspan="2"></td></tr> 
      <tr><td>1</td><td>1</td><td>2</td></tr>
     </table>
-    <table>
+    <table align="center">
         <tr><td colspan="3"></td><td>2</td><td>3</td></tr>
         <tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr>
         <tr><td></td><td>2</td><td>3</td><td>4</td><td>5</td></tr>
